--- a/src/weather.css
+++ b/src/weather.css
@@ -4,11 +4,11 @@
   font-family: sans-serif;
   color: grey;
   margin: 60px auto;
-  max-width: 600px;
+  max-width: 500px;
   padding: 15px;
 }
 h1 {
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 400;
   margin-left: 320px;
   margin-top: 30px;
@@ -26,25 +26,25 @@ h1 {
   margin-top: -55px;
   font-size: 14px;
 }
-img {
-  margin-top: -200px;
-  margin-left: -170px;
-  width: 80px;
+canvas {
+  margin-left: -130px;
+  vertical-align: top;
+  margin-top: -120px;
+  padding: 9px 0 0 0;
 }
 .Weather .Temp {
   display: inline-block;
   line-height: 38px;
-  padding-left: 38px;
+  padding-left: 15px;
   vertical-align: top;
   font-size: 12px;
-  margin-top: -46px;
+  margin-top: -50px;
 }
 
 .Weather .Temper {
   margin-top: -130px;
   margin-left: -30px;
   font-size: 30px;
-  font-weight: 420;
 }
 button {
   margin-right: 190px;
